Optimize some details, don't support Void as codec's return type